@@ -4,15 +4,12 @@ import java.io.File;
 import java.io.IOException;
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
-import java.util.stream.StreamSupport;
 
 import javax.swing.JFileChooser;
 import javax.swing.JFrame;
 import javax.swing.filechooser.FileNameExtensionFilter;
 
 import org.apache.velocity.exception.ResourceNotFoundException;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.CrossOrigin;
@@ -21,71 +18,70 @@ import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PutMapping;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
 
+import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import nl.wilcokas.luckystackworker.LuckyStackWorkerContext;
 import nl.wilcokas.luckystackworker.constants.Constants;
-import nl.wilcokas.luckystackworker.dto.StatusUpdate;
-import nl.wilcokas.luckystackworker.dto.Version;
+import nl.wilcokas.luckystackworker.dto.ProfileDTO;
+import nl.wilcokas.luckystackworker.dto.ResponseDTO;
+import nl.wilcokas.luckystackworker.dto.SettingsDTO;
+import nl.wilcokas.luckystackworker.dto.StatusUpdateDTO;
+import nl.wilcokas.luckystackworker.dto.VersionDTO;
+import nl.wilcokas.luckystackworker.exceptions.ProfileNotFoundException;
 import nl.wilcokas.luckystackworker.model.Profile;
-import nl.wilcokas.luckystackworker.repository.ProfileRepository;
 import nl.wilcokas.luckystackworker.service.ProfileService;
 import nl.wilcokas.luckystackworker.service.ReferenceImageService;
+import nl.wilcokas.luckystackworker.service.SettingsService;
 import nl.wilcokas.luckystackworker.util.Util;
 
 @CrossOrigin(origins = { "http://localhost:4200" })
+@RequiredArgsConstructor
 @RestController
 @RequestMapping("/api/profiles")
 @Slf4j
 public class ProfileController {
 
-    @Autowired
-    private ProfileRepository profileRepository;
-
-    @Autowired
-    private ReferenceImageService referenceImageService;
-
-    @Autowired
-    private ProfileService profileService;
+    private final ProfileService profileService;
+    private final ReferenceImageService referenceImageService;
+    private final SettingsService settingsService;
 
     @GetMapping
-    public List<Profile> getProfiles() {
+    public List<ProfileDTO> getProfiles() {
         log.info("getProfiles called");
-        return StreamSupport.stream(profileRepository.findAll().spliterator(), false)
-                .collect(Collectors.toList());
+        return profileService.getAllProfiles().stream().map(ProfileDTO::new).toList();
     }
 
     @GetMapping("/selected")
-    public Profile getSelectedProfile() {
+    public ResponseDTO getSelectedProfile() {
         log.info("getSelectedProfile called");
-        Profile profile = new Profile();
+        ProfileDTO profile = new ProfileDTO();
         String profileName = LuckyStackWorkerContext.getSelectedProfile();
         if (profileName != null) {
-            profile = profileRepository.findByName(profileName)
-                    .orElseThrow(() -> new ResourceNotFoundException(String.format("Unknown profile %s", profileName)));
+            profile = new ProfileDTO(profileService.findByName(profileName)
+                    .orElseThrow(() -> new ProfileNotFoundException(String.format("Unknown profile %s", profileName))));
         }
-
-        // This is not persisted, so get state from ref.service
-        profile.setRootFolder(referenceImageService.getSettings().getRootFolder());
-        profile.setLargeImage(referenceImageService.isLargeImage());
-
-        return profile;
+        SettingsDTO settings = new SettingsDTO(settingsService.getSettings());
+        settings.setRootFolder(settingsService.getRootFolder());
+        settings.setLargeImage(referenceImageService.isLargeImage());
+        return new ResponseDTO(profile, settings);
     }
 
     @GetMapping("/{profile}")
-    public Profile getProfile(@PathVariable(value = "profile") String profileName) {
+    public ProfileDTO getProfile(@PathVariable(value = "profile") String profileName) {
         log.info("getProfile called with profile {}", profileName);
-        return profileRepository.findByName(profileName)
-                .orElseThrow(() -> new ResourceNotFoundException(String.format("Unknown profile %s", profileName)));
+        return new ProfileDTO(profileService.findByName(profileName)
+                .orElseThrow(() -> new ResourceNotFoundException(String.format("Unknown profile %s", profileName))));
     }
 
     @GetMapping("/load")
-    public Profile loadProfile() {
+    public ResponseDTO loadProfile() {
         log.info("loadProfile called");
         JFrame frame = referenceImageService.getParentFrame();
         JFileChooser jfc = referenceImageService
-                .getJFileChooser(LuckyStackWorkerContext.getWorkerProperties().get("inputFolder"));
+                .getJFileChooser(settingsService.getRootFolder());
         FileNameExtensionFilter filter = new FileNameExtensionFilter("YAML", "yaml");
         jfc.setFileFilter(filter);
         int returnValue = referenceImageService.getFilenameFromDialog(frame, jfc, false);
@@ -95,18 +91,20 @@ public class ProfileController {
             String filePathNoExt = Util.getPathWithoutExtension(selectedFilePath);
             Profile profile = Util.readProfile(filePathNoExt);
             if (profile != null) {
-                profile.setLargeImage(referenceImageService.isLargeImage());
-                profile.setDispersionCorrectionEnabled(false); // Dispersion correction is not meant to be persisted.
-                updateProfile(profile);
+                SettingsDTO settingsDTO = new SettingsDTO(settingsService.getSettings());
+                settingsDTO.setLargeImage(referenceImageService.isLargeImage());
+                Util.setNonPersistentSettings(profile);
+                ProfileDTO profileDTO = new ProfileDTO(profile);
+                updateProfile(profileDTO, null);
                 LuckyStackWorkerContext.setSelectedProfile(profile.getName());
-                return profile;
+                return new ResponseDTO(profileDTO, settingsDTO);
             }
         }
         return null;
     }
 
     @PutMapping
-    public ResponseEntity<String> updateProfile(@RequestBody Profile profile) {
+    public ResponseEntity<String> updateProfile(@RequestBody ProfileDTO profile, @RequestParam String operation) {
         // Rate limiting added to prevent overloading whenever scroll keys are held down
         // or pressed very quickly.
         LocalDateTime activeOperationTime = LuckyStackWorkerContext.getActiveOperationTime();
@@ -115,7 +113,7 @@ public class ProfileController {
                 .isAfter(activeOperationTime.plusSeconds(Constants.MAX_OPERATION_TIME_BEFORE_RESUMING))) {
             LuckyStackWorkerContext.setActiveOperationTime(LocalDateTime.now());
             profileService.updateProfile(profile);
-            referenceImageService.updateProcessing(profile);
+            referenceImageService.updateProcessing(new Profile(profile), operation);
             LuckyStackWorkerContext.setActiveOperationTime(null);
         } else {
             log.warn("Attempt to update image while another operation was in progress");
@@ -124,14 +122,14 @@ public class ProfileController {
     }
 
     @PutMapping("/apply")
-    public void applyProfile(@RequestBody Profile profile) throws IOException {
+    public void applyProfile(@RequestBody ProfileDTO profile) throws IOException {
         String profileName = profile.getName();
         if (profileName != null) {
             LuckyStackWorkerContext.statusUpdate(Constants.STATUS_WORKING);
-            LuckyStackWorkerContext.updateWorkerForProfile(profile);
             LuckyStackWorkerContext.setSelectedRoi(referenceImageService.getFinalResultImage().getRoi());
-            LuckyStackWorkerContext.setActiveProfile(profileName);
+            LuckyStackWorkerContext.setSelectedProfile(profileName);
             referenceImageService.writeProfile();
+            LuckyStackWorkerContext.setProfileBeingApplied(true);
         } else {
             log.warn("Attempt to apply profile while nothing was selected");
             LuckyStackWorkerContext.statusUpdate(Constants.STATUS_IDLE);
@@ -139,13 +137,13 @@ public class ProfileController {
     }
 
     @GetMapping("/status")
-    public StatusUpdate getStatus() {
+    public StatusUpdateDTO getStatus() {
         log.info("getStatus called");
         return LuckyStackWorkerContext.getStatus();
     }
 
     @GetMapping("/version")
-    public Version getLatestVersion() {
+    public VersionDTO getLatestVersion() {
         log.info("getLatestVersion called");
         return referenceImageService.getLatestVersion(LocalDateTime.now());
     }
